--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/e58b0e44a8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="CSS/style.css">
 
     <title>Sample Leader Board Website</title>
@@ -15,7 +16,26 @@
 
 <body>
     <header>
-
+        <nav>
+            <div class="logo">
+                <img src="images/icons/logo.png" alt="">
+                <p class="nav-logo-title">Idea</p>
+            </div>
+            <div class="menu-items">
+                <div class="menu">
+                    <a class="menu-item" href="">Home</a>
+                </div>
+                <div class="menu">
+                    <a class="menu-item" href="">About</a>
+                </div>
+                <div class="menu">
+                    <a class="menu-item" href="">Works</a>
+                </div>
+                <div class="menu">
+                    <a class="menu-item" href=""><img src="images/icons/profile.png" alt=""></a>
+                </div>
+            </div>
+        </nav>
     </header>
 
     <main>
@@ -99,6 +119,89 @@
 
             </div>
 
+        </section>
+
+        <section class="container">
+            <div class="latest-courses">
+                <h2 class="section-title">Latest Courses</h2>
+                <div class="courses">
+                    <div class="course">
+                        <div class="course-banner">
+                            <img src="images/courses/course-1.png">
+                        </div>
+                        <div class="course-description">
+                            <h3 class="course-title">React - The Complete Guide 2023</h3>
+                            <p class="course-instruction">Reed Krakoff</p>
+                            <div class="course-info">
+                                <div class="course-ratings">
+                                    <i class="fa-solid fa-star filled"></i>
+                                    <i class="fa-solid fa-star filled"></i>
+                                    <i class="fa-solid fa-star filled"></i>
+                                    <i class="fa-solid fa-star filled"></i>
+                                    <i class="fa-solid fa-star unfilled"></i>
+                                    <span class="rating-point">4.5</span>
+
+                                </div>
+                                <div class="course-duration">
+                                    <i class="fa-regular fa-clock clock"></i>
+                                    <span class="time">1.30 hr</span>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="course">
+                        <div class="course-banner">
+                            <img src="images/courses/course-2.png">
+                        </div>
+                        <div class="course-description">
+                            <h3 class="course-title">Powerpoint 2023 Master Powerpoint Course</h3>
+                            <p class="course-instruction">Walter Scott</p>
+                            <div class="course-info">
+                                <div class="course-ratings">
+                                    <i class="fa-solid fa-star filled"></i>
+                                    <i class="fa-solid fa-star filled"></i>
+                                    <i class="fa-solid fa-star filled"></i>
+                                    <i class="fa-solid fa-star filled"></i>
+                                    <i class="fa-solid fa-star unfilled"></i>
+                                    <span class="rating-point">4.5</span>
+
+                                </div>
+                                <div class="course-duration">
+                                    <i class="fa-regular fa-clock clock"></i>
+                                    <span class="time">1.30 hr</span>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="course">
+                        <div class="course-banner">
+                            <img src="images/courses/course-3.png">
+                        </div>
+                        <div class="course-description">
+                            <h3 class="course-title">The Complete JavaScript Course 2023</h3>
+                            <p class="course-instruction">Reed Krakoff</p>
+                            <div class="course-info">
+                                <div class="course-ratings">
+                                    <i class="fa-solid fa-star filled"></i>
+                                    <i class="fa-solid fa-star filled"></i>
+                                    <i class="fa-solid fa-star filled"></i>
+                                    <i class="fa-solid fa-star filled"></i>
+                                    <i class="fa-solid fa-star unfilled"></i>
+                                    <span class="rating-point">4.5</span>
+
+                                </div>
+                                <div class="course-duration">
+                                    <i class="fa-regular fa-clock clock"></i>
+                                    <span class="time">1.30 hr</span>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 </body>
